--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <div class="page-body-wrapper">
     <div class="page-sidebar">
       <app-logo />
+
       <app-sidebar />
     </div>
     <div class="page-body">
@@ -13,7 +14,7 @@
             <div class="col-lg-6">
               <div class="page-header-left">
                 <h3>
-                  Dashboard
+                  Dashboard<button *ngIf="isAuthenticated" (click)="logout()">Logout</button>
                   <small>Admin panel</small>
                 </h3>
               </div>
